# iterator

./: .gitmodules  CMakeLists.txt  Doxyfile.in  README.org
iterator/: CMakeLists.txt  algorithm.hpp  autoref.hpp  config.hpp.in  generic.hpp  gslice.hpp  import.hpp  indexed.hpp  iterable.hpp  iterator-config.cmake.in  iterator.hpp  range.hpp  slice.hpp
iterator_testing/: CMakeLists.txt  autoref_test.cpp  for_each_iter.cpp  indexed.cpp  iterable_test.cpp  range_test.cpp  test_macros.hpp
